--- a/app/src/main/res/layout/activity_choice_page.xml
+++ b/app/src/main/res/layout/activity_choice_page.xml
@@ -32,22 +32,24 @@
         android:layout_width="318dp"
         android:layout_height="123dp"
         android:layout_marginTop="28dp"
-        android:layout_marginEnd="76dp"
-        android:text="TextView"
         android:textSize="40dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/TakePhotoButton"
-        android:layout_width="318dp"
-        android:layout_height="144dp"
-        android:layout_marginEnd="44dp"
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/TakePhoto"
+        android:layout_width="21dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="120dp"
+        android:clickable="true"
         android:onClick="ChangeProfileImage"
-        android:text="Change Profile Image"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/RunButton"
-        app:layout_constraintVertical_bias="0.435" />
+        app:layout_constraintHorizontal_bias="0.661"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/NameView"
+        app:srcCompat="@android:drawable/ic_menu_add"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
