solve error display

--- a/app/src/main/res/layout/activity_choice_page.xml
+++ b/app/src/main/res/layout/activity_choice_page.xml
@@ -10,9 +10,9 @@
         android:id="@+id/ProfileView"
         android:layout_width="177dp"
         android:layout_height="143dp"
-        android:layout_marginEnd="132dp"
         app:layout_constraintBottom_toTopOf="@+id/RunButton"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.786"
         tools:srcCompat="@tools:sample/avatars" />
@@ -21,11 +21,11 @@
         android:id="@+id/RunButton"
         android:layout_width="318dp"
         android:layout_height="144dp"
-        android:layout_marginEnd="44dp"
         android:layout_marginBottom="252dp"
         android:text="Run the detection"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/NameView"
