--- a/app/src/main/res/layout/activity_choice_page.xml
+++ b/app/src/main/res/layout/activity_choice_page.xml
@@ -13,8 +13,9 @@
         app:layout_constraintBottom_toTopOf="@+id/RunButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.786"
+
+        app:layout_constraintTop_toBottomOf="@+id/NameView"
+        app:layout_constraintVertical_bias="0.512"
         tools:srcCompat="@tools:sample/avatars" />
 
     <Button
@@ -42,13 +43,14 @@
         android:id="@+id/TakePhoto"
         android:layout_width="21dp"
         android:layout_height="24dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="119dp"
         android:clickable="true"
         android:onClick="ChangeProfileImage"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.661"
+        app:layout_constraintHorizontal_bias="0.7"
+        app:layout_constraintStart_toEndOf="@+id/ProfileView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/NameView"
+        app:layout_constraintTop_toTopOf="@+id/ProfileView"
         app:srcCompat="@android:drawable/ic_menu_add"
         tools:ignore="MissingConstraints" />
 
