--- a/app/src/main/res/layout/activity_first_page.xml
+++ b/app/src/main/res/layout/activity_first_page.xml
@@ -21,10 +21,11 @@
         android:id="@+id/TitleTextView"
         android:layout_width="362dp"
         android:layout_height="129dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginTop="124dp"
         android:text="Opioid Detector"
         android:textSize="50dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.673"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
