--- a/app/src/main/res/layout/activity_camera_land.xml
+++ b/app/src/main/res/layout/activity_camera_land.xml
@@ -19,7 +19,8 @@
         android:layout_width="400dp"
         android:layout_height="60dp"
         android:text=""
-        android:textColor="#0073FF"
+        android:textColor="#020304"
+        android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints"
