--- a/app/src/main/res/layout/activity_first_page.xml
+++ b/app/src/main/res/layout/activity_first_page.xml
@@ -19,11 +19,12 @@
 
     <TextView
         android:id="@+id/TitleTextView"
-        android:layout_width="362dp"
-        android:layout_height="129dp"
+        android:layout_width="313dp"
+        android:layout_height="170dp"
         android:layout_marginTop="124dp"
         android:text="Opioid Detector"
-        android:textSize="50dp"
+        android:textColor="#020304"
+        android:textSize="45dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.673"
         app:layout_constraintStart_toStartOf="parent"
