--- a/app/src/main/res/layout/activity_choice_page.xml
+++ b/app/src/main/res/layout/activity_choice_page.xml
@@ -12,46 +12,51 @@
         android:layout_height="143dp"
         app:layout_constraintBottom_toTopOf="@+id/RunButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.44"
 
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/NameView"
-        app:layout_constraintVertical_bias="0.512"
+        app:layout_constraintVertical_bias="0.346"
         tools:srcCompat="@tools:sample/avatars" />
 
     <Button
         android:id="@+id/RunButton"
         android:layout_width="318dp"
         android:layout_height="144dp"
-        android:layout_marginBottom="252dp"
+        android:layout_marginBottom="124dp"
         android:text="Run the detection"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent" />
+
 
     <TextView
         android:id="@+id/NameView"
-        android:layout_width="318dp"
-        android:layout_height="123dp"
-        android:layout_marginTop="28dp"
+        android:layout_width="323dp"
+        android:layout_height="79dp"
+        android:layout_marginTop="68dp"
+        android:textColor="#020304"
         android:textSize="40dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/TakePhoto"
-        android:layout_width="21dp"
-        android:layout_height="24dp"
-        android:layout_marginTop="119dp"
-        android:clickable="true"
+        android:id="@+id/floating_action_button"
         android:onClick="ChangeProfileImage"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.7"
-        app:layout_constraintStart_toEndOf="@+id/ProfileView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ProfileView"
-        app:srcCompat="@android:drawable/ic_menu_add"
-        tools:ignore="MissingConstraints" />
+        android:layout_width="26dp"
+        android:layout_height="25dp"
+        android:layout_gravity="bottom|right"
+        app:backgroundTint="@color/colorGrey"
+        app:fabCustomSize="24dp"
+        app:fabSize="mini"
+
+
+        app:layout_constraintBottom_toBottomOf="@+id/ProfileView"
+        app:layout_constraintEnd_toEndOf="@+id/ProfileView"
+        app:srcCompat="@android:drawable/ic_menu_add" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
