--- a/app/src/main/res/layout/activity_get_text.xml
+++ b/app/src/main/res/layout/activity_get_text.xml
@@ -8,37 +8,40 @@
 
     <Button
         android:id="@+id/ChangeActivity"
-        android:layout_width="256dp"
+        android:layout_width="250dp"
         android:layout_height="131dp"
-        android:layout_marginBottom="90dp"
+        android:layout_marginBottom="32dp"
         android:text="Validate"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.469"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/MessageView"
-        android:layout_width="249dp"
-        android:layout_height="89dp"
-        android:layout_marginTop="112dp"
+        android:layout_width="250dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="24dp"
         android:text="Please write the text written on your pill"
-        android:textSize="25dp"
         android:textColor="#020304"
+        android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.469"
+        app:layout_constraintHorizontal_bias="0.468"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/Edit"
-        android:layout_width="260dp"
-        android:layout_height="84dp"
+        android:layout_width="250dp"
+        android:layout_height="80dp"
         android:gravity="center_horizontal"
         android:text="Text"
         android:textSize="40dp"
         app:layout_constraintBottom_toTopOf="@+id/ChangeActivity"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.469"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/MessageView" />
+        app:layout_constraintTop_toBottomOf="@+id/MessageView"
+        app:layout_constraintVertical_bias="0.414" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
