--- a/app/src/main/res/layout/activity_camera_land.xml
+++ b/app/src/main/res/layout/activity_camera_land.xml
@@ -40,4 +40,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/StartButton"
+        android:onClick="Start"
+        android:layout_width="115dp"
+        android:layout_height="68dp"
+        android:text="Start"
+        app:layout_constraintBottom_toBottomOf="@+id/CameraView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.772" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
