--- a/app/src/main/res/layout/activity_camera_land.xml
+++ b/app/src/main/res/layout/activity_camera_land.xml
@@ -52,4 +52,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.772" />
 
+    <Button
+        android:id="@+id/DispenseButton"
+        android:onClick="Dispense"
+        android:layout_width="163dp"
+        android:layout_height="92dp"
+        android:layout_marginBottom="236dp"
+        android:text="Dispense PIll"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.455"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
